--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -22,7 +22,7 @@ header {
       text-decoration: none;
     }
 
-    .navitem {
+    .navItem {
       display: inline-block;
       color: #F2F2F2;
       background-color: #333740;
